manifests/112/service-project-1.12.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-to-do-svc
spec:
  type: ClusterIP
  selector:
    app: django-to-do-app
  ports:
    - port: 8001
      protocol: TCP
      targetPort: 8000
