manifests/112/ingress-1.12.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: project-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: django-to-do-svc
          servicePort: 8001
